Fix file upload filenames not wrapping

--- a/packages/govuk-frontend/src/govuk/components/file-upload/_index.scss
+++ b/packages/govuk-frontend/src/govuk/components/file-upload/_index.scss
@@ -84,6 +84,7 @@
     padding: govuk-spacing(3) govuk-spacing(2);
     background-color: govuk-colour("white");
     text-align: left;
+    @include govuk-text-break-word;
   }
 
   // bugs documented with button using flex
